Programming_Project/parser.output
State 4 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: header code main
    2        | header main

    3 header: %empty

    4 main: KW_DEF KW_MAIN '(' ')' ':' code KW_ENDDEF ';'

    5 code: instr
    6     | code instr

    7 instr: ex_instr
    8      | break
    9      | decl
   10      | return
   11      | if
   12      | comp
   13      | loops
   14      | continue
   15      | empty
   16      | new_table_from_table
   17      | comments

   18 comments: TK_LINECOMMENTS

   19 ex_instr: ex ';'

   20 function: KW_DEF TK_ID '(' parameters ')' '-' '>' types ':' code KW_ENDDEF
   21         | KW_DEF TK_ID '(' parameters ')' ':' code KW_ENDDEF
   22         | KW_DEF TK_ID '(' ')' '-' '>' types ':' code KW_ENDDEF
   23         | KW_DEF TK_ID '(' ')' ':' code KW_ENDDEF
   24         | KW_DEF TK_ID '(' ')' ':' KW_ENDDEF

   25 empty: ';'

   26 continue: KW_CONTINUE ';'

   27 $@1: %empty

   28 $@2: %empty

   29 comp: KW_COMP TK_ID ':' $@1 code $@2 KW_ENDCOMP ';'

   30 loops: KW_FOR TK_ID KW_IN '[' TK_INT ':' ex ']' ':' code KW_ENDFOR ';'
   31      | KW_FOR TK_ID KW_IN '[' TK_INT ':' ex ':' TK_INT ']' ':' code KW_ENDFOR ';'
   32      | KW_WHILE '(' ex ')' ':' code KW_ENDWHILE ';'

   33 new_table_from_table: TK_ID KW_DE '[' ex KW_FOR TK_ID ':' TK_INT ']' ':' types ';'
   34                     | TK_ID KW_DE '[' ex KW_FOR TK_ID ':' types KW_IN TK_ID KW_OF TK_INT ']' ':' types ';'

   35 return: KW_RETURN ';'
   36       | KW_RETURN ex ';'

   37 if: KW_IF '(' ex ')' ':' code KW_ENDIF ';'
   38   | KW_IF '(' ex ')' ':' code KW_ELSE ':' code KW_ENDIF ';'

   39 break: KW_BREAK ';'

   40 function: TK_ID '(' ')'
   41         | TK_ID '(' exList ')'
   42         | '#' TK_ID '(' ')'
   43         | '#' TK_ID '(' exList ')'

   44 ex: TK_INT
   45   | '-' TK_INT
   46   | TK_REAL
   47   | '-' TK_REAL
   48   | KW_TRUE
   49   | KW_FALSE
   50   | TK_ID
   51   | '-' TK_ID
   52   | '#' TK_ID
   53   | '-' '#' TK_ID
   54   | '#' TK_ID '[' ex ']'
   55   | '#' TK_ID '[' ']'
   56   | TK_ID '[' ex ']'
   57   | TK_ID '[' ']'
   58   | TK_CONSTRING
   59   | ex '.' ex
   60   | ex '/' ex
   61   | ex '=' ex
   62   | ex '+' ex
   63   | ex '-' ex
   64   | ex '*' ex
   65   | ex '%' ex
   66   | ex '>' ex
   67   | ex '<' ex
   68   | ex KW_E ex
   69   | ex KW_AND ex
   70   | ex KW_OR ex
   71   | ex KW_NOT ex
   72   | ex KW_LESSE ex
   73   | ex KW_GREATERE ex
   74   | ex KW_NOTE ex
   75   | ex KW_P ex
   76   | KW_NOT ex
   77   | ex KW_PLUSE ex
   78   | ex KW_MINUSE ex
   79   | ex KW_DIVE ex
   80   | ex KW_MULTE ex
   81   | ex KW_MODE ex
   82   | ex KW_DE ex
   83   | '[' ex ']'
   84   | '(' ex ')'
   85   | function

   86 parameters: parameter
   87           | parameters ',' parameter

   88 parameter: TK_ID ':' types
   89          | TK_ID '[' TK_INT ']' ':' types
   90          | TK_ID '[' ']' ':' types

   91 decl: exList ':' types ';'
   92     | KW_CONST TK_ID '=' ex ':' types ';'

   93 exList: ex
   94       | exList ',' ex

   95 types: KW_INTEGER
   96      | KW_STR
   97      | KW_BOOLEAN
   98      | KW_SCALAR
   99      | TK_ID


Terminals, with rules where they appear

    $end (0) 0
    '#' (35) 42 43 52 53 54 55
    '%' (37) 65
    '(' (40) 4 20 21 22 23 24 32 37 38 40 41 42 43 84
    ')' (41) 4 20 21 22 23 24 32 37 38 40 41 42 43 84
    '*' (42) 64
    '+' (43) 62
    ',' (44) 87 94
    '-' (45) 20 22 45 47 51 53 63
    '.' (46) 59
    '/' (47) 60
    ':' (58) 4 20 21 22 23 24 29 30 31 32 33 34 37 38 88 89 90 91 92
    ';' (59) 4 19 25 26 29 30 31 32 33 34 35 36 37 38 39 91 92
    '<' (60) 67
    '=' (61) 61 92
    '>' (62) 20 22 66
    '[' (91) 30 31 33 34 54 55 56 57 83 89 90
    ']' (93) 30 31 33 34 54 55 56 57 83 89 90
    error (256)
    TK_ID <str> (258) 20 21 22 23 24 29 30 31 33 34 40 41 42 43 50 51 52 53 54 55 56 57 88 89 90 92 99
    TK_INT <str> (259) 30 31 33 34 44 45 89
    TK_REAL <str> (260) 46 47
    TK_CONSTRING <str> (261) 58
    TK_LINECOMMENTS <str> (262) 18
    KW_IF (263) 37 38
    KW_ELSE (264) 38
    KW_DEF (265) 4 20 21 22 23 24
    KW_MAIN (266) 4
    KW_ENDDEF (267) 4 20 21 22 23 24
    KW_INTEGER (268) 95
    KW_SCALAR (269) 98
    KW_STR (270) 96
    KW_BOOLEAN (271) 97
    KW_RETURN (272) 35 36
    KW_COMP (273) 29
    KW_ENDCOMP (274) 29
    KW_AND (275) 69
    KW_OR (276) 70
    KW_NOT (277) 71 76
    KW_LESSE (278) 72
    KW_GREATERE (279) 73
    KW_E (280) 68
    KW_TRUE (281) 48
    KW_FALSE (282) 49
    KW_NOTE (283) 74
    KW_PLUSE (284) 77
    KW_MINUSE (285) 78
    KW_MULTE (286) 80
    KW_DIVE (287) 79
    KW_MODE (288) 81
    KW_DE (289) 33 34 82
    KW_P (290) 75
    KW_ENDIF (291) 37 38
    KW_FOR (292) 30 31 33 34
    KW_ENDFOR (293) 30 31
    KW_IN (294) 30 31 34
    KW_WHILE (295) 32
    KW_ENDWHILE (296) 32
    KW_BREAK (297) 39
    KW_CONTINUE (298) 26
    KW_OF (299) 34
    KW_CONST (300) 92


Nonterminals, with rules where they appear

    $accept (63)
        on left: 0
    program (64)
        on left: 1 2
        on right: 0
    header <str> (65)
        on left: 3
        on right: 1 2
    main <str> (66)
        on left: 4
        on right: 1 2
    code <str> (67)
        on left: 5 6
        on right: 1 4 6 20 21 22 23 29 30 31 32 37 38
    instr <str> (68)
        on left: 7 8 9 10 11 12 13 14 15 16 17
        on right: 5 6
    comments <str> (69)
        on left: 18
        on right: 17
    ex_instr <str> (70)
        on left: 19
        on right: 7
    function <str> (71)
        on left: 20 21 22 23 24 40 41 42 43
        on right: 85
    empty <str> (72)
        on left: 25
        on right: 15
    continue <str> (73)
        on left: 26
        on right: 14
    comp <str> (74)
        on left: 29
        on right: 12
    $@1 (75)
        on left: 27
        on right: 29
    $@2 (76)
        on left: 28
        on right: 29
    loops <str> (77)
        on left: 30 31 32
        on right: 13
    new_table_from_table <str> (78)
        on left: 33 34
        on right: 16
    return <str> (79)
        on left: 35 36
        on right: 10
    if <str> (80)
        on left: 37 38
        on right: 11
    break <str> (81)
        on left: 39
        on right: 8
    ex <str> (82)
        on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85
        on right: 19 30 31 32 33 34 36 37 38 54 56 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 92 93 94
    parameters <str> (83)
        on left: 86 87
        on right: 20 21 87
    parameter <str> (84)
        on left: 88 89 90
        on right: 86 87
    decl <str> (85)
        on left: 91 92
        on right: 9
    exList <str> (86)
        on left: 93 94
        on right: 41 43 91 94
    types <str> (87)
        on left: 95 96 97 98 99
        on right: 20 22 33 34 88 89 90 91 92


State 0

    0 $accept: . program $end
    1 program: . header code main
    2        | . header main
    3 header: . %empty

    $default  reduce using rule 3 (header)

    program  go to state 1
    header   go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: header . code main
    2        | header . main
    4 main: . KW_DEF KW_MAIN '(' ')' ':' code KW_ENDDEF ';'
    5 code: . instr
    6     | . code instr
    7 instr: . ex_instr
    8      | . break
    9      | . decl
   10      | . return
   11      | . if
   12      | . comp
   13      | . loops
   14      | . continue
   15      | . empty
   16      | . new_table_from_table
   17      | . comments
   18 comments: . TK_LINECOMMENTS
   19 ex_instr: . ex ';'
   20 function: . KW_DEF TK_ID '(' parameters ')' '-' '>' types ':' code KW_ENDDEF
   21         | . KW_DEF TK_ID '(' parameters ')' ':' code KW_ENDDEF
   22         | . KW_DEF TK_ID '(' ')' '-' '>' types ':' code KW_ENDDEF
   23         | . KW_DEF TK_ID '(' ')' ':' code KW_ENDDEF
   24         | . KW_DEF TK_ID '(' ')' ':' KW_ENDDEF
   25 empty: . ';'
   26 continue: . KW_CONTINUE ';'
   29 comp: . KW_COMP TK_ID ':' $@1 code $@2 KW_ENDCOMP ';'
   30 loops: . KW_FOR TK_ID KW_IN '[' TK_INT ':' ex ']' ':' code KW_ENDFOR ';'
   31      | . KW_FOR TK_ID KW_IN '[' TK_INT ':' ex ':' TK_INT ']' ':' code KW_ENDFOR ';'
   32      | . KW_WHILE '(' ex ')' ':' code KW_ENDWHILE ';'
   33 new_table_from_table: . TK_ID KW_DE '[' ex KW_FOR TK_ID ':' TK_INT ']' ':' types ';'
   34                     | . TK_ID KW_DE '[' ex KW_FOR TK_ID ':' types KW_IN TK_ID KW_OF TK_INT ']' ':' types ';'
   35 return: . KW_RETURN ';'
   36       | . KW_RETURN ex ';'
   37 if: . KW_IF '(' ex ')' ':' code KW_ENDIF ';'
   38   | . KW_IF '(' ex ')' ':' code KW_ELSE ':' code KW_ENDIF ';'
   39 break: . KW_BREAK ';'
   40 function: . TK_ID '(' ')'
   41         | . TK_ID '(' exList ')'
   42         | . '#' TK_ID '(' ')'
   43         | . '#' TK_ID '(' exList ')'
   44 ex: . TK_INT
   45   | . '-' TK_INT
   46   | . TK_REAL
   47   | . '-' TK_REAL
   48   | . KW_TRUE
   49   | . KW_FALSE
   50   | . TK_ID
   51   | . '-' TK_ID
   52   | . '#' TK_ID
   53   | . '-' '#' TK_ID
   54   | . '#' TK_ID '[' ex ']'
   55   | . '#' TK_ID '[' ']'
   56   | . TK_ID '[' ex ']'
   57   | . TK_ID '[' ']'
   58   | . TK_CONSTRING
   59   | . ex '.' ex
   60   | . ex '/' ex
   61   | . ex '=' ex
   62   | . ex '+' ex
   63   | . ex '-' ex
   64   | . ex '*' ex
   65   | . ex '%' ex
   66   | . ex '>' ex
   67   | . ex '<' ex
   68   | . ex KW_E ex
   69   | . ex KW_AND ex
   70   | . ex KW_OR ex
   71   | . ex KW_NOT ex
   72   | . ex KW_LESSE ex
   73   | . ex KW_GREATERE ex
   74   | . ex KW_NOTE ex
   75   | . ex KW_P ex
   76   | . KW_NOT ex
   77   | . ex KW_PLUSE ex
   78   | . ex KW_MINUSE ex
   79   | . ex KW_DIVE ex
   80   | . ex KW_MULTE ex
   81   | . ex KW_MODE ex
   82   | . ex KW_DE ex
   83   | . '[' ex ']'
   84   | . '(' ex ')'
   85   | . function
   91 decl: . exList ':' types ';'
   92     | . KW_CONST TK_ID '=' ex ':' types ';'
   93 exList: . ex
   94       | . exList ',' ex

    TK_ID            shift, and go to state 4
    TK_INT           shift, and go to state 5
    TK_REAL          shift, and go to state 6
    TK_CONSTRING     shift, and go to state 7
    TK_LINECOMMENTS  shift, and go to state 8
    KW_IF            shift, and go to state 9
    KW_DEF           shift, and go to state 10
    KW_RETURN        shift, and go to state 11
    KW_COMP          shift, and go to state 12
    KW_NOT           shift, and go to state 13
    KW_TRUE          shift, and go to state 14
    KW_FALSE         shift, and go to state 15
    KW_FOR           shift, and go to state 16
    KW_WHILE         shift, and go to state 17
    KW_BREAK         shift, and go to state 18
    KW_CONTINUE      shift, and go to state 19
    KW_CONST         shift, and go to state 20
    '['              shift, and go to state 21
    '('              shift, and go to state 22
    '-'              shift, and go to state 23
    ';'              shift, and go to state 24
    '#'              shift, and go to state 25

    main                  go to state 26
    code                  go to state 27
    instr                 go to state 28
    comments              go to state 29
    ex_instr              go to state 30
    function              go to state 31
    empty                 go to state 32
    continue              go to state 33
    comp                  go to state 34
    loops                 go to state 35
    new_table_from_table  go to state 36
    return                go to state 37
    if                    go to state 38
    break                 go to state 39
    ex                    go to state 40
    decl                  go to state 41
    exList                go to state 42


State 3

    0 $accept: program $end .

    $default  accept


State 4

   33 new_table_from_table: TK_ID . KW_DE '[' ex KW_FOR TK_ID ':' TK_INT ']' ':' types ';'
   34                     | TK_ID . KW_DE '[' ex KW_FOR TK_ID ':' types KW_IN TK_ID KW_OF TK_INT ']' ':' types ';'
   40 function: TK_ID . '(' ')'
   41         | TK_ID . '(' exList ')'
   50 ex: TK_ID .  [KW_AND, KW_OR, KW_NOT, KW_LESSE, KW_GREATERE, KW_E, KW_NOTE, KW_PLUSE, KW_MINUSE, KW_MULTE, KW_DIVE, KW_MODE, KW_DE, KW_P, '.', '+', '-', '*', '/', '%', '<', '>', '=', ':', ';', ',']
   56   | TK_ID . '[' ex ']'
   57   | TK_ID . '[' ']'

    KW_DE  shift, and go to state 43
    '['    shift, and go to state 44
    '('    shift, and go to state 45

    KW_DE     [reduce using rule 50 (ex)]
    $default  reduce using rule 50 (ex)


State 5

   44 ex: TK_INT .

    $default  reduce using rule 44 (ex)


State 6

   46 ex: TK_REAL .

    $default  reduce using rule 46 (ex)


State 7

   58 ex: TK_CONSTRING .

    $default  reduce using rule 58 (ex)


State 8

   18 comments: TK_LINECOMMENTS .

    $default  reduce using rule 18 (comments)


State 9

   37 if: KW_IF . '(' ex ')' ':' code KW_ENDIF ';'
   38   | KW_IF . '(' ex ')' ':' code KW_ELSE ':' code KW_ENDIF ';'

    '('  shift, and go to state 46


State 10

    4 main: KW_DEF . KW_MAIN '(' ')' ':' code KW_ENDDEF ';'
   20 function: KW_DEF . TK_ID '(' parameters ')' '-' '>' types ':' code KW_ENDDEF
   21         | KW_DEF . TK_ID '(' parameters ')' ':' code KW_ENDDEF
   22         | KW_DEF . TK_ID '(' ')' '-' '>' types ':' code KW_ENDDEF
   23         | KW_DEF . TK_ID '(' ')' ':' code KW_ENDDEF
   24         | KW_DEF . TK_ID '(' ')' ':' KW_ENDDEF

    TK_ID    shift, and go to state 47
    KW_MAIN  shift, and go to state 48


State 11

   20 function: . KW_DEF TK_ID '(' parameters ')' '-' '>' types ':' code KW_ENDDEF
   21         | . KW_DEF TK_ID '(' parameters ')' ':' code KW_ENDDEF
   22         | . KW_DEF TK_ID '(' ')' '-' '>' types ':' code KW_ENDDEF
   23         | . KW_DEF TK_ID '(' ')' ':' code KW_ENDDEF
   24         | . KW_DEF TK_ID '(' ')' ':' KW_ENDDEF
   35 return: KW_RETURN . ';'
   36       | KW_RETURN . ex ';'
   40 function: . TK_ID '(' ')'
   41         | . TK_ID '(' exList ')'
   42         | . '#' TK_ID '(' ')'
   43         | . '#' TK_ID '(' exList ')'
   44 ex: . TK_INT
   45   | . '-' TK_INT
   46   | . TK_REAL
   47   | . '-' TK_REAL
   48   | . KW_TRUE
   49   | . KW_FALSE
   50   | . TK_ID
   51   | . '-' TK_ID
   52   | . '#' TK_ID
   53   | . '-' '#' TK_ID
   54   | . '#' TK_ID '[' ex ']'
   55   | . '#' TK_ID '[' ']'
   56   | . TK_ID '[' ex ']'
   57   | . TK_ID '[' ']'
   58   | . TK_CONSTRING
   59   | . ex '.' ex
   60   | . ex '/' ex
   61   | . ex '=' ex
   62   | . ex '+' ex
   63   | . ex '-' ex
   64   | . ex '*' ex
   65   | . ex '%' ex
   66   | . ex '>' ex
   67   | . ex '<' ex
   68   | . ex KW_E ex
   69   | . ex KW_AND ex
   70   | . ex KW_OR ex
   71   | . ex KW_NOT ex
   72   | . ex KW_LESSE ex
   73   | . ex KW_GREATERE ex
   74   | . ex KW_NOTE ex
   75   | . ex KW_P ex
   76   | . KW_NOT ex
   77   | . ex KW_PLUSE ex
   78   | . ex KW_MINUSE ex
   79   | . ex KW_DIVE ex
   80   | . ex KW_MULTE ex
   81   | . ex KW_MODE ex
   82   | . ex KW_DE ex
   83   | . '[' ex ']'
   84   | . '(' ex ')'
   85   | . function

    TK_ID         shift, and go to state 49
    TK_INT        shift, and go to state 5
    TK_REAL       shift, and go to state 6
    TK_CONSTRING  shift, and go to state 7
    KW_DEF        shift, and go to state 50
    KW_NOT        shift, and go to state 13
    KW_TRUE       shift, and go to state 14
    KW_FALSE      shift, and go to state 15
    '['           shift, and go to state 21
    '('           shift, and go to state 22
    '-'           shift, and go to state 23
    ';'           shift, and go to state 51
    '#'           shift, and go to state 25

    function  go to state 31
    ex        go to state 52


State 12

   29 comp: KW_COMP . TK_ID ':' $@1 code $@2 KW_ENDCOMP ';'

    TK_ID  shift, and go to state 53


State 13

   20 function: . KW_DEF TK_ID '(' parameters ')' '-' '>' types ':' code KW_ENDDEF
   21         | . KW_DEF TK_ID '(' parameters ')' ':' code KW_ENDDEF
   22         | . KW_DEF TK_ID '(' ')' '-' '>' types ':' code KW_ENDDEF
   23         | . KW_DEF TK_ID '(' ')' ':' code KW_ENDDEF
   24         | . KW_DEF TK_ID '(' ')' ':' KW_ENDDEF
   40         | . TK_ID '(' ')'
   41         | . TK_ID '(' exList ')'
   42         | . '#' TK_ID '(' ')'
   43         | . '#' TK_ID '(' exList ')'
   44 ex: . TK_INT
   45   | . '-' TK_INT
   46   | . TK_REAL
   47   | . '-' TK_REAL
   48   | . KW_TRUE
   49   | . KW_FALSE
   50   | . TK_ID
   51   | . '-' TK_ID
   52   | . '#' TK_ID
   53   | . '-' '#' TK_ID
   54   | . '#' TK_ID '[' ex ']'
   55   | . '#' TK_ID '[' ']'
   56   | . TK_ID '[' ex ']'
   57   | . TK_ID '[' ']'
   58   | . TK_CONSTRING
   59   | . ex '.' ex
   60   | . ex '/' ex
   61   | . ex '=' ex
   62   | . ex '+' ex
   63   | . ex '-' ex
   64   | . ex '*' ex
   65   | . ex '%' ex
   66   | . ex '>' ex
   67   | . ex '<' ex
   68   | . ex KW_E ex
   69   | . ex KW_AND ex
   70   | . ex KW_OR ex
   71   | . ex KW_NOT ex
   72   | . ex KW_LESSE ex
   73   | . ex KW_GREATERE ex
   74   | . ex KW_NOTE ex
   75   | . ex KW_P ex
   76   | . KW_NOT ex
   76   | KW_NOT . ex
   77   | . ex KW_PLUSE ex
   78   | . ex KW_MINUSE ex
   79   | . ex KW_DIVE ex
   80   | . ex KW_MULTE ex
   81   | . ex KW_MODE ex
   82   | . ex KW_DE ex
   83   | . '[' ex ']'
   84   | . '(' ex ')'
   85   | . function
